Bug/GUI: :bug: Fixed the bug of the navbar having a huge white space gap after a certain width

--- a/assets/css/components/headline/home page/courses-sm.css
+++ b/assets/css/components/headline/home page/courses-sm.css
@@ -19,7 +19,7 @@
   }
 
   .main-grid-container__course__headline__box > h1 {
-    font-size: 2rem;
+    font-size: 6vw;
     text-align: center;
     padding-top: 11px;
   }
