--- a/assets/css/components/navbar/nav-sm.css
+++ b/assets/css/components/navbar/nav-sm.css
@@ -25,7 +25,6 @@
     position: absolute;
     background: #47cca0;
     top: 0;
-    left: 70%;
     right: 0;
     bottom: 0;
   }
@@ -37,7 +36,7 @@
 
   .header__overlay > ul > li > img {
     position: relative;
-    right: 50%;
+    right: 4.2vw;
     width: 75px;
     bottom: 20%;
     min-height: 76px;
@@ -45,7 +44,7 @@
     border-radius: 50%;
   }
   .header__overlay > ul {
-    padding: 2rem 0;
+    padding: 2rem 2rem;
   }
 
   .header__overlay > ul > li:nth-child(2) > p:nth-child(1) {
